@@ -2,10 +2,9 @@ package com.researchworx.cresco.controller.netdiscovery;
 
 
 
+import org.apache.commons.net.util.Base64;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
@@ -35,16 +34,6 @@ public class DiscoveryCrypto {
         return key;
     }
 
-    /*
-    private Key generateKeyFromString2(final String secKey) throws Exception {
-        //final String HashKey = hashString(secKey, "SHA-1");
-        byte[] keyVal = new BASE64Decoder().decodeBuffer(secKey);
-        keyVal = Arrays.copyOf(keyVal, 16);
-        final Key key = new SecretKeySpec(keyVal, ALGORITHM);
-        return key;
-    }
-    */
-
     public String encrypt(final String valueEnc, final String secKey) {
 
         String encryptedValue = null;
@@ -54,7 +43,8 @@ public class DiscoveryCrypto {
             final Cipher c = Cipher.getInstance(ALGORITHM);
             c.init(Cipher.ENCRYPT_MODE, key);
             final byte[] encValue = c.doFinal(valueEnc.getBytes());
-            encryptedValue = new BASE64Encoder().encode(encValue);
+            //encryptedValue = new BASE64Encoder().encode(encValue);
+            encryptedValue = Base64.encodeBase64String(encValue);
         } catch(Exception ex) {
             logger.error(ex.getMessage());
             ex.printStackTrace();
@@ -72,7 +62,9 @@ public class DiscoveryCrypto {
             final Key key = generateKeyFromString(secretKey);
             final Cipher c = Cipher.getInstance(ALGORITHM);
             c.init(Cipher.DECRYPT_MODE, key);
-            final byte[] decorVal = new BASE64Decoder().decodeBuffer(encryptedValue);
+            //final byte[] decorVal = new BASE64Decoder().decodeBuffer(encryptedValue);
+            final byte[] decorVal = Base64.decodeBase64(encryptedValue);
+            //byte[] valueDecoded= Base64.decodeBase64(bytesEncoded );
             final byte[] decValue = c.doFinal(decorVal);
             decryptedValue = new String(decValue);
         } catch(Exception ex) {
